--- a/WebApplication1_2021_02_17_secondASPNET/Site/commandsExecuter.html
+++ b/WebApplication1_2021_02_17_secondASPNET/Site/commandsExecuter.html
@@ -35,18 +35,20 @@
             </div>
         </div>
     </nav>
-    <button onclick="GetCommands()">Get Commands!</button>
+    <button onclick="GetCommands()">Execute Commands!</button>
+    <button onclick="Reset()">Reset!</button>
     <div id="commandsPlace">Commands:</div>
     <canvas id="MainCanvas" width="320" height="240"></canvas>
     <script>
         const canvas = document.getElementById("MainCanvas");
-        const width = 0;
-        const height = 0;
         const ctx = canvas.getContext("2d");
+        const width = canvas.width = window.innerWidth;
+        const height = canvas.height = window.innerHeight;
         var Player_X = 50;
         var Player_Y = 50;
         var canContinue = true;
 
+        var array_of_functions = [];
         async function GetCommands() {
             var getCommands = await fetch("/Get_executeCommands?CommandsList.txt");
             var placeHolder = document.getElementById("commandsPlace");
@@ -55,30 +57,26 @@
 
             var arrayOfCommands = answer.split(' ');
 
-            const width = canvas.width = window.innerWidth;
-            const height = canvas.height = window.innerHeight;
-            ctx.fillStyle = 'rgb(0, 0, 0)';
-            ctx.fillRect(0, 0, width, height);
-            Player_X = 100;
-            Player_Y = 50;
-
+            //const width = canvas.width = window.innerWidth;
+            //const height = canvas.height = window.innerHeight;
 
             arrayOfCommands.forEach(Element => Mover(Element));
 
+            array_of_functions[0]();
 
         }
         function Mover(string) {
             if (string == "Right") {
-                Right();
+                array_of_functions.push(Right);
             }
             else if (string == "Up") {
-                Up();
+                array_of_functions.push(Up);
             }
             else if (string == "Left") {
-                Left();
+                array_of_functions.push(Left);
             }
             else if (string == "Down") {
-                Down();
+                array_of_functions.push(Down);
             }
         }
         function Right() {
@@ -86,16 +84,19 @@
             ctx.fillStyle = 'rgb(255, 0, 0)';
             ctx.fillRect(Player_X, Player_Y, 50, 50);
             var new_X = Player_X + 50;
+            var howLong = 0;
             var timer = setInterval(() => {
                 ctx.fillStyle = 'rgb(0, 0, 0)';
                 ctx.fillRect(Player_X, Player_Y, 50, 50);
                 Player_X += 5;
-                if (Player_X > new_X) {
+                if (10 < howLong) {
                     canContinue = true;
                     clearInterval(timer);
+                    Continue();
                 }
                 ctx.fillStyle = 'rgb(255, 0, 0)';
                 ctx.fillRect(Player_X, Player_Y, 50, 50);
+                howLong++;
             }, 10);
 
 
@@ -105,16 +106,19 @@
             ctx.fillStyle = 'rgb(255, 0, 0)';
             ctx.fillRect(Player_X, Player_Y, 50, 50);
             var new_X = Player_X - 50;
+            var howLong = 0;
             var timer = setInterval(() => {
                 ctx.fillStyle = 'rgb(0, 0, 0)';
                 ctx.fillRect(Player_X, Player_Y, 50, 50);
                 Player_X -= 5;
-                if (Player_X < new_X) {
+                if (10 < howLong) {
                     canContinue = true;
                     clearInterval(timer);
+                    Continue();
                 }
                 ctx.fillStyle = 'rgb(255, 0, 0)';
                 ctx.fillRect(Player_X, Player_Y, 50, 50);
+                howLong++;
             }, 10);
 
 
@@ -125,37 +129,60 @@
             ctx.fillStyle = 'rgb(255, 0, 0)';
             ctx.fillRect(Player_X, Player_Y, 50, 50);
             var new_Y = Player_Y - 50;
+            var howLong = 0;
             var timer = setInterval(() => {
                 ctx.fillStyle = 'rgb(0, 0, 0)';
                 ctx.fillRect(Player_X, Player_Y, 50, 50);
                 Player_Y -= 5;
-                if (Player_Y < new_Y) {
+                if (10 < howLong) {
                     canContinue = true;
                     clearInterval(timer);
+                    Continue();
                 }
                 ctx.fillStyle = 'rgb(255, 0, 0)';
                 ctx.fillRect(Player_X, Player_Y, 50, 50);
+                howLong++;
             }, 10);
 
-        } function Down() {
+        }
+        function Down() {
 
             canContinue = false;
             ctx.fillStyle = 'rgb(255, 0, 0)';
             ctx.fillRect(Player_X, Player_Y, 50, 50);
             var new_Y = Player_Y + 50;
+            var howLong = 0;
             var timer = setInterval(() => {
                 ctx.fillStyle = 'rgb(0, 0, 0)';
                 ctx.fillRect(Player_X, Player_Y, 50, 50);
                 Player_Y += 5;
-                if (Player_Y > new_Y) {
+                if (10 < howLong) {
                     canContinue = true;
                     clearInterval(timer);
+                    Continue();
                 }
                 ctx.fillStyle = 'rgb(255, 0, 0)';
                 ctx.fillRect(Player_X, Player_Y, 50, 50);
+                howLong++;
             }, 10);
 
         }
+        function Continue() {
+
+            if (array_of_functions.length > 1) {
+                array_of_functions.shift();
+                array_of_functions[0]();
+
+            }
+        }
+        async function Reset() {
+            ctx.fillStyle = 'rgb(0, 0, 0)';
+            ctx.fillRect(0, 0, width, height);
+            Player_X = 100;
+            Player_Y = 50;
+
+        }
+
         document.onkeydown = function checkKeycode(event) {
             var keycode;
             if (!event) var event = window.event;
@@ -207,40 +234,40 @@
     </script>
 
     <script>
-            //var canvas = document.getElementById("MainCanvas");
-            //var width = canvas.width = window.innerWidth;
-            //var height = canvas.height = window.innerHeight;
+                    //var canvas = document.getElementById("MainCanvas");
+                    //var width = canvas.width = window.innerWidth;
+                    //var height = canvas.height = window.innerHeight;
 
-            //const ctx = canvas.getContext("2d");
-            //ctx.fillStyle = 'rgb(0, 0, 0)';
-            //ctx.fillRect(0, 0, width, height);
-
-
-            //ctx.fillStyle = 'rgb(255, 123, 0)';
-            //ctx.beginPath();
-            //ctx.moveTo(50, 50);
-            //ctx.moveTo(120, 30);
-            //ctx.moveTo(120, 70);
-            //// draw your path
-            //ctx.fillRect(0, 50, 50, 150);
+                    //const ctx = canvas.getContext("2d");
+                    //ctx.fillStyle = 'rgb(0, 0, 0)';
+                    //ctx.fillRect(0, 0, width, height);
 
 
-            //var x = 50;
-            //var y = 50;
-            //ctx.fillStyle = 'rgb(255, 0, 0)';
-            //ctx.fillRect(x, 50, 50, 50);
-            //let time = setInterval(() => {
+                    //ctx.fillStyle = 'rgb(255, 123, 0)';
+                    //ctx.beginPath();
+                    //ctx.moveTo(50, 50);
+                    //ctx.moveTo(120, 30);
+                    //ctx.moveTo(120, 70);
+                    //// draw your path
+                    //ctx.fillRect(0, 50, 50, 150);
 
 
-            //    ctx.fillStyle = 'rgb(0, 0, 0)';
-            //    ctx.fillRect(x, 50, y, 50);
-            //    x += 5;
-            //    if (x > width) {
-            //        x = 0;
-            //    }
-            //    ctx.fillStyle = 'rgb(255, 0, 0)';
-            //    ctx.fillRect(x, 50, y, 50);
-            //}, 100);
+                    //var x = 50;
+                    //var y = 50;
+                    //ctx.fillStyle = 'rgb(255, 0, 0)';
+                    //ctx.fillRect(x, 50, 50, 50);
+                    //let time = setInterval(() => {
+
+
+                    //    ctx.fillStyle = 'rgb(0, 0, 0)';
+                    //    ctx.fillRect(x, 50, y, 50);
+                    //    x += 5;
+                    //    if (x > width) {
+                    //        x = 0;
+                    //    }
+                    //    ctx.fillStyle = 'rgb(255, 0, 0)';
+                    //    ctx.fillRect(x, 50, y, 50);
+                    //}, 100);
     </script>
 </body>
 </html>
