--- a/WebApplication1_2021_02_17_secondASPNET/Site/adminPage.html
+++ b/WebApplication1_2021_02_17_secondASPNET/Site/adminPage.html
@@ -6,6 +6,7 @@
 </head>
 <body style="background-color:dodgerblue">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">Predictions.com</a>
@@ -26,7 +27,10 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/experiments">Experiments place!</a>
                     </li>
-
+                    <li class="nav-item">
+                        <a class="nav-link" href="/moldenbrodExperiments">moldenbrod Experiments place!</a>
+                    </li>
+                    
                 </ul>
             </div>
         </div>
@@ -49,10 +53,28 @@
              style="width:96%;
                 ">
             <input type="text" class="form-control" placeholder="New answer" aria-label="New answer" aria-describedby="button-addon2" id="newPredictionsInput">
-            <button class="btn btn-outline-secondary btn-warning" type="button" id="button-addon2" onclick="OnAddButtonClick()">Add</button>
-            <script>
+            <button class="btn btn-outline-secondary btn-warning" type="button" id="button-addon2" onclick="OnClick()">Add</button>
+            <script >
                 async function OnClick() {
-                    fetch("/addPrediction?" + document.getElementById("newPredictionsInput").value);
+                    //fetch("/addPrediction?" + document.getElementById("newPredictionsInput").value);
+                postData("/addPrediction", {text: document.getElementById("newPredictionsInput").value});
+                }    
+                async function postData(url = '', data = {}) {
+                      // Default options are marked with *
+                      const response = await fetch(url, {
+                        method: 'POST', // *GET, POST, PUT, DELETE, etc.
+                        mode: 'cors', // no-cors, *cors, same-origin
+                        cache: 'no-cache', // *default, no-cache, reload, force-cache, only-if-cached
+                        credentials: 'same-origin', // include, *same-origin, omit
+                        headers: {
+                          'Content-Type': 'application/json'
+                          // 'Content-Type': 'application/x-www-form-urlencoded',
+                        },
+                        redirect: 'follow', // manual, *follow, error
+                        referrerPolicy: 'no-referrer', // no-referrer, *client
+                        body: JSON.stringify(data) // body data type must match "Content-Type" header
+                      });
+                      return await response.json(); // parses JSON response into native JavaScript objects
                 }
             </script>
 
@@ -92,6 +114,5 @@
     </script>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </body>
 </html>
