--- a/WebApplication1_2021_02_17_secondASPNET/Site/loginPage.html
+++ b/WebApplication1_2021_02_17_secondASPNET/Site/loginPage.html
@@ -52,9 +52,6 @@
     <a href="../predictions">Go to Predictions page</a>-->
 
     <script>
-        window.onload = function () {
-            console.log('OK');
-        };
 
         window.onkeypress = event => {
             if (event.key === "Enter") {
@@ -63,22 +60,30 @@
         };
 
         async function onClick() {
-            let password = document.getElementById("password");
-            let longin = document.getElementById("login");
+            let passwordInput = document.getElementById("password");
+            let loginInput = document.getElementById("login");
+
+            var auth = await fetch("/login", {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({
+                    Login: loginInput.value,
+                    Password: passwordInput.value
+                })
+
+            });
+
+            var res = await auth.text();
 
 
-            var correctPasswordResponse = await fetch("/password");
-            var correctPassword = await correctPasswordResponse.text();
-
-            var correctLoginResponse = await fetch("/login");
-            var correctLogin = await correctLoginResponse.text();
-
-            if (password.value === correctPassword && longin.value.toLowerCase() === correctLogin) {
-                console.log("Ok");
-                window.location = "../adminPage";
+            if (res == "ok") {
+                alert("Success");
+                //window.location = "../adminPage";
             }
             else {
-                alert("NO!");
+                alert("Failed to login!");
             }
         }
     </script>
