More changes fixed

--- a/WebApplication1_2021_02_17_secondASPNET/Site/adminPage.html
+++ b/WebApplication1_2021_02_17_secondASPNET/Site/adminPage.html
@@ -57,7 +57,10 @@
             <script >
                 async function OnClick() {
                     //fetch("/addPrediction?" + document.getElementById("newPredictionsInput").value);
-                postData("/addPrediction", {text: document.getElementById("newPredictionsInput").value});
+                    postData("/addPrediction", {
+                        PredictionString: document.getElementById("newPredictionsInput").value,
+                        PredictionId: 0
+                    });
                 }    
                 async function postData(url = '', data = {}) {
                       // Default options are marked with *
